tests/invalid/Final_Invalid_8.whiley
function f(int x) -> (int r):
    //
    final int y = 1
    //
    if x >= 0:
        y = y + 1
    //
    return y